--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,12 +10,13 @@
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
-    "@types/react": "^18.2.14",
-    "tsup": "^8.0.1",
-    "typescript": "5.5.4"
+    "@types/react": "^19.2.2",
+    "minimatch": "^10.0.1",
+    "tsup": "^8.5.0",
+    "typescript": "5.9.3"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-native": "0.76.9"
+    "react": "^19.2.0",
+    "react-native": "0.82.0"
   }
 }
