chore: update pnpm version and add cSpell ignore comment in devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,6 +12,7 @@
   "customizations": {
     "vscode": {
       "extensions": [
+        // cSpell:ignore bierner dbaeumer esbenp streetsidesoftware
         "bierner.github-markdown-preview",
         "bierner.markdown-mermaid",
         "bierner.markdown-preview-github-styles",
