Add .env* to dev inputs in turbo.json for environment variable management

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,8 @@
   "remoteEnv": {
     "PATH": "/home/node/.local/share/pnpm:$${containerEnv:PATH}"
   },
-
+  "forwardPorts": [8081],
+  "runArgs": ["-p=8081:8081"],
   "customizations": {
     "vscode": {
       "extensions": [
