--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -4,31 +4,122 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "dev": "expo start --web",
+    "dev": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
+    "@babel/runtime": "^7.26.0",
+    "@expo/metro": "^54.0.0",
+    "@expo/metro-runtime": "^6.1.2",
+    "@radix-ui/primitive": "^1.1.3",
+    "@radix-ui/react-compose-refs": "^1.1.2",
+    "@radix-ui/react-context": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dismissable-layer": "^1.1.11",
+    "@radix-ui/react-focus-guards": "^1.1.3",
+    "@radix-ui/react-focus-scope": "^1.1.7",
+    "@radix-ui/react-id": "^1.1.1",
+    "@radix-ui/react-portal": "^1.1.9",
+    "@radix-ui/react-presence": "^1.1.5",
+    "@radix-ui/react-primitive": "^2.1.3",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-use-callback-ref": "^1.1.1",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "@radix-ui/react-use-effect-event": "^0.0.2",
+    "@radix-ui/react-use-escape-keydown": "^1.1.1",
+    "@radix-ui/react-use-layout-effect": "^1.1.1",
+    "@react-native/assets-registry": "^0.82.1",
+    "@react-native/normalize-colors": "^0.82.1",
+    "@react-native/virtualized-lists": "^0.82.1",
+    "@react-navigation/bottom-tabs": "^7.5.0",
+    "@react-navigation/core": "^7.12.4",
+    "@react-navigation/elements": "^2.7.0",
+    "@react-navigation/native": "^7.1.18",
+    "@react-navigation/native-stack": "^7.5.1",
+    "@react-navigation/routers": "^7.5.1",
     "@repo/ui": "workspace:*",
+    "@ungap/structured-clone": "^1.3.0",
+    "abort-controller": "^3.0.0",
+    "anser": "^2.3.2",
+    "ansi-regex": "^6.2.2",
+    "ansi-styles": "^6.2.3",
+    "aria-hidden": "^1.2.6",
+    "buffer": "^5.7.1",
+    "color": "^5.0.2",
+    "color-convert": "^3.1.2",
+    "color-name": "^2.0.2",
+    "color-string": "^2.1.2",
+    "css-in-js-utils": "^3.1.0",
+    "decode-uri-component": "^0.4.1",
+    "detect-node-es": "^1.1.0",
+    "es6-extension": "link:promise/setimmediate/es6-extension",
+    "escape-string-regexp": "^5.0.0",
+    "event-target-shim": "^6.0.2",
     "expo": "~54.0.13",
+    "expo-asset": "^12.0.9",
     "expo-constants": "~18.0.9",
     "expo-linking": "~8.0.8",
+    "expo-modules-core": "^3.0.22",
     "expo-router": "~6.0.12",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.7",
+    "fast-deep-equal": "^3.1.3",
+    "fbjs": "^3.0.5",
+    "filter-obj": "^6.1.0",
+    "get-nonce": "^1.0.1",
+    "hyphenate-style-name": "^1.1.0",
+    "ieee754": "^1.2.1",
+    "inline-style-prefixer": "^7.0.1",
+    "invariant": "^2.2.4",
+    "memoize-one": "^6.0.0",
+    "metro-runtime": "^0.83.3",
+    "nanoid": "^5.0.7",
+    "nullthrows": "^1.1.1",
+    "postcss-value-parser": "^4.2.0",
+    "pretty-format": "^30.2.0",
+    "promise": "^8.3.0",
+    "punycode": "^2.3.1",
+    "query-string": "^9.3.1",
     "react": "19.2.0",
+    "react-devtools-core": "^7.0.1",
     "react-dom": "19.2.0",
+    "react-fast-compare": "^3.2.2",
+    "react-freeze": "^1.0.4",
+    "react-is": "^19.2.0",
     "react-native": "0.82.0",
+    "react-native-is-edge-to-edge": "^1.2.1",
     "react-native-safe-area-context": "5.6.1",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "~0.21.1"
+    "react-native-web": "~0.21.1",
+    "react-refresh": "^0.18.0",
+    "react-remove-scroll": "^2.7.1",
+    "react-remove-scroll-bar": "^2.3.8",
+    "react-style-singleton": "^2.2.3",
+    "regenerator-runtime": "^0.14.1",
+    "scheduler": "^0.27.0",
+    "shallowequal": "^1.1.0",
+    "split-on-first": "^4.0.0",
+    "stacktrace-parser": "^0.1.11",
+    "styleq": "^0.1.3",
+    "tslib": "^2.8.1",
+    "use-callback-ref": "^1.3.3",
+    "use-latest-callback": "^0.3.1",
+    "use-sidecar": "^1.1.3",
+    "use-sync-external-store": "^1.6.0",
+    "vaul": "^1.1.2",
+    "warn-once": "^0.1.1",
+    "webidl-conversions": "^8.0.0",
+    "whatwg-fetch": "^3.6.20",
+    "whatwg-url-without-unicode": "8.0.0-3"
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
     "@expo/webpack-config": "19.0.1",
     "@types/react": "~19.2.2",
+    "base64-js": "^1.5.1",
     "typescript": "5.9.3"
   },
   "expo": {
