--- a/turbo.json
+++ b/turbo.json
@@ -8,6 +8,7 @@
       "dependsOn": ["^build"]
     },
     "dev": {
+      "inputs": ["$TURBO_DEFAULT$", ".env*"],
       "cache": false,
       "persistent": true
     },
