chore: add pnpm workspace configuration and turbo.json for task management
- Created pnpm-workspace.yaml to define package structure and specify built dependencies.
- Added turbo.json to configure build, lint, type checking, and development tasks with caching options.

--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "doit-app",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "test",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "turbo run build",
+    "dev": "turbo run dev",
+    "lint": "turbo run lint",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "check-types": "turbo run check-types"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@10.15.1",
   "devDependencies": {
-    "turbo": "^2.5.8"
+    "prettier": "^3.6.2",
+    "turbo": "^2.5.8",
+    "typescript": "5.9.2"
+  },
+  "packageManager": "pnpm@10.19.0",
+  "engines": {
+    "node": ">=18"
   }
 }
